--- a/_sass/theme/_air_light.scss
+++ b/_sass/theme/_air_light.scss
@@ -39,8 +39,8 @@ $sidebar-screen-min-width   : 1024px;
     --global-base-color                 : #{$background};
     --global-bg-color                   : #{$background};
     --global-footer-bg-color            : #{$footer};
-    --global-border-color               : #{$light-primary-color};
-    --global-dark-border-color          : #{$background-light};
+    --global-border-color               : #e5e5e5;
+    --global-dark-border-color          : #cccccc;
     --global-code-background-color      : #fafafa;
     --global-code-text-color            : #{$darker-primary-color};
     --global-fig-caption-color          : #{$light-primary-color};
@@ -50,6 +50,6 @@ $sidebar-screen-min-width   : 1024px;
     --global-masthead-link-color        : #{$text};
     --global-masthead-link-color-hover  : #{$link};
     --global-text-color                 : #{$text};
-    --global-text-color-light           : #{$light-primary-color};
-    --global-thead-color                : #{$background-lighter};
+    --global-text-color-light           : #666666;
+    --global-thead-color                : #f0f0f0;
 }
